public/assets/css/entitieslist.css
/* ... */
.button-group button {
  width: 100px;
  text-align: center;
  padding: 5px 10px;
}

#header-mobile {
  display: none;
}

/* Pictures Section */


.pictures-section {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
  /* height: fit-content; */
  /* grid-template-rows: auto; */
  /* align-items: center;
  justify-content: space-between; */
  /* flex-wrap: wrap; */
  gap: 32px;
}

.picture-item {
  position: relative;
}

.hidden {
  display: none !important;
}

.picture-placeholder {
  /* width: 400px;
  height: 230px;
  border: 2px dashed #ccc;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  background-color: #f9f9f9; */
  /* width: 440px; */
  flex: auto; /* Equal space for both placeholders */
  max-width: 100%; /* Limit the size to prevent overflow */
  width: 100%;
  /* aspect-ratio: 4 / 3; */
  aspect-ratio: 1/1;

  /* height: 250px; */
  border: 2px dashed #ccc;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  border-radius: 4px;
  overflow: hidden;
  transition: border-color 0.1s ease, background-color 0.1s ease;
}

.picture-placeholder i {
  font-size: 24px;
  color: #888;
}

.uploaded-image {
  width: 100%;
  height: 100%;
  object-fit: contain; /* Ensures the whole image is visible */
  background-color: #f9f9f9;
  border-radius: 4px;
  transform-origin: center;
  transition: transform 0.2s ease;
}

/* Add hover effect for better user experience */
.picture-placeholder:hover {
  border-color: #888;
}

/* Adjust the positioning of the remove button */
.remove-picture {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  font-size: 14px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

.rotate-picture {
  position: absolute;
  top: 10px;
  right: 40px;
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border: none;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  font-size: 14px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

/* File */
.file-placeholder {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 25px;
    border: 2px dashed #ccc;
    cursor: pointer;
    margin-right: 15px;
    margin-bottom: 15px;
    position: relative;
}
.file-placeholder i {
    font-size: 48px; /* Larger icon for better visibility */
    color: #777;
}
.file-preview-section {
    display: flex;
    flex-wrap: wrap;
    margin-top: 10px;
}
.file-item {
    display: flex;
    align-items: center;
    margin-right: 15px;
    margin-bottom: 10px;
    position: relative;
}
.file-item img {
    max-width: 100px;
    max-height: 100px;
    margin-right: 10px;
    border: 1px solid #ccc;
}
.file-item .file-info {
    display: flex;
    flex-direction: column;
}
.file-item i {
    font-size: 24px;
    margin-right: 10px;
}
.file-item p {
    margin: 0;
}

/* Remove button */
.file-item .remove-button {
    position: absolute;
    top: -10px;
    right: -10px;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    border: none;
    border-radius: 50%;
    cursor: pointer;
    width: 20px;
    height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Pictures - New */
.file-uploader {
  /* width: 500px; */
  /* background-color: #2c2c4d; */
  padding: 1rem;
  border-radius: 8px;
  text-align: center;
}

.upload-area {
  border: 2px dashed #ccc;
  background-color: #f9f9f9;
  padding: 30px;
  border-radius: 10px;
  cursor: pointer;
}

.upload-area.dragging {
  border-color:#007bff;
  background-color:#eaf4ff;
}

.cloud-icon {
  font-size: 30px;
  display: block;
  margin-bottom: 10px;
}

.file-formats {
  font-size: 12px;
  color: #aaa;
}

.browse-btn {
  border: 1px solid #d1d5db;
  border-radius: 8px;
  background: #fff;
  color: #374151;
  padding: 8px 16px;
  margin-top: 10px;
  border-radius: 5px;
  cursor: pointer;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
}

.file-status {
  margin-top: 1rem;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.action-buttons {
  margin-top: 20px;
  display: flex;
  justify-content: center;
  gap: 1rem;
}

.cancel-btn,
.done-btn {
  background-color: #748194;
  color: #fff;
  border: none;
  padding: 8px 16px;
  border-radius: 5px;
  cursor: pointer;
}

.done-btn {
  background-color: #2c7be5;
}

.photo-item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px;
  margin: 5px 0;
  border-radius: 8px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  font-size: 14px;
  gap: 1rem;
  width: 100%;
  background-color: #f9f9f9;
}

.file-info {
  text-align: start;
}

.file-details {
  display: flex;
  align-items: center;
  justify-items: start;
  gap: 1rem;
}

.file-detail {
  display: flex;
  align-items: start;
  gap: 1rem;
}

.file-details .file-size {
  font-size: 12px;
  color: #bbb;
}

.photo-status {
  display: flex;
  align-items: center;
  gap: 5px;
  font-size: 12px;
}

.file-icon {
  width: 40px;
  height: 40px;
  margin-right: 10px;
  object-fit: cover;
  border-radius: 5px;
}

.remove-photo-button {
  background-color: rgba(0, 0, 0, 0.5);
  color: white;
  border-radius: 50%;
  cursor: pointer;
  width: 24px;
  height: 24px;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid #d1d5db;
}

/* File */
.files {
  padding: 1rem;
}

.file-viewer {
  display: flex;
  width: 100%;
  /* max-width: 1000px; */
  border: 1px solid #ddd;
  border-radius: 5px;
  overflow: hidden;
  background: #fff;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.file-list {
  width: 100%;
  border-right: 1px solid #ddd;
  padding: 20px;
  background-color: #f9f9f9;
}
/* ... */

